adds release system, fixes debounced property update notifications, adds tests

--- a/tests/.jshintrc
+++ b/tests/.jshintrc
@@ -21,7 +21,8 @@
     "andThen",
     "currentURL",
     "currentPath",
-    "currentRouteName"
+    "currentRouteName",
+    "getController"
   ],
   "node": false,
   "browser": false,
