--- a/package.json
+++ b/package.json
@@ -1,7 +1,7 @@
 {
   "name": "rate-limit-computed",
   "version": "0.0.0",
-  "description": "The default blueprint for ember-cli addons.",
+  "description": "Debounced and Throttled Computed Properties for Ember.",
   "directories": {
     "doc": "doc",
     "test": "tests"
@@ -11,12 +11,19 @@
     "build": "ember build",
     "test": "ember try:testall"
   },
-  "repository": "",
+  "homepage": "https://github.com/runspired/rate-limit-computed",
+  "bugs": "https://github.com/runspired/rate-limit-computed/issues",
+  "repository": {
+    "type": "git",
+    "url": "git@github.com:runspired/rate-limit-computed.git"
+  },
   "engines": {
     "node": ">= 0.10.0"
   },
-  "author": "",
-  "license": "MIT",
+  "author": {
+    "name": "Chris Thoburn (@runspired)",
+    "url": "http://runspired.com"
+  },
   "devDependencies": {
     "broccoli-asset-rev": "^2.0.2",
     "ember-cli": "0.2.3",
@@ -28,10 +35,16 @@
     "ember-cli-inject-live-reload": "^1.3.0",
     "ember-cli-qunit": "0.3.10",
     "ember-cli-uglify": "1.0.1",
+    "ember-code-snippet": "^1.0.2",
     "ember-data": "1.0.0-beta.16.1",
-    "ember-export-application-global": "^1.0.2",
     "ember-disable-prototype-extensions": "^1.0.0",
-    "ember-try": "0.0.4"
+    "ember-export-application-global": "^1.0.2",
+    "ember-try": "0.0.4",
+    "grunt": "0.4.5",
+    "grunt-bump": "0.0.16",
+    "grunt-cli": "0.1.13",
+    "jit-grunt": "0.9.0",
+    "time-grunt": "1.0.0"
   },
   "keywords": [
     "ember-addon"
