--- a/package.json
+++ b/package.json
@@ -9,7 +9,7 @@
   "scripts": {
     "start": "ember server",
     "build": "ember build",
-    "test": "ember try:testall"
+    "test": "ember test"
   },
   "homepage": "https://github.com/runspired/rate-limit-computed",
   "bugs": "https://github.com/runspired/rate-limit-computed/issues",
